Optimize build process with pip caching
Added caching for pip dependencies to optimize build time.

--- a/.github/workflows/main_alz-backend.yml
+++ b/.github/workflows/main_alz-backend.yml
@@ -28,6 +28,14 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -68,4 +76,5 @@ jobs:
         with:
           app-name: 'alz-backend'
           slot-name: 'Production'
+
           
